--- a/Undead-Engine.vcxproj
+++ b/Undead-Engine.vcxproj
@@ -142,6 +142,7 @@
   <ItemGroup>
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Renderer.h" />
     <ClInclude Include="UndeadEngine.h" />
     <ClInclude Include="Window.h" />
     <ClInclude Include="WindowData.h" />
@@ -153,6 +154,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="UndeadEngine.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
