--- a/Undead-Engine.vcxproj
+++ b/Undead-Engine.vcxproj
@@ -140,20 +140,28 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="AdvancedColor.h" />
+    <ClInclude Include="AdvancedVector2.h" />
+    <ClInclude Include="BaseSprite.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="AdvancedRectangle.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="UndeadEngine.h" />
     <ClInclude Include="Window.h" />
     <ClInclude Include="WindowData.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AdvancedColor.cpp" />
+    <ClCompile Include="AdvancedVector2.cpp" />
+    <ClCompile Include="BaseSprite.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="AdvancedRectangle.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="UndeadEngine.cpp" />
     <ClCompile Include="Window.cpp" />
